--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praise Profile</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <table cellspacing = "20">
@@ -13,7 +15,7 @@
                 <img src="images/8-modified.png" alt="Profile-pic" width="200px">
             </td>
             <td>
-                <h2>Praise Aribisala</h2>
+                <h1>Praise Aribisala</h2>
                 <p><i>CTO and Founder of <a href="#">Wise Space</a>.</i></p>
                 <p>I am a Software developer and a Basketballer.</p>
             </td>
@@ -25,8 +27,24 @@
         <li>The Complete Web development Teaching</li>
         <li>The complete game development Teaching</li>
     </ul>
-
-    <h2>Work Experience</h2>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="20">
+        <tr>
+            <td>2009-2013</td>
+            <td>Researcher at The Institute of Cognitive Neurosciences</td>
+        </tr>
+        <tr>
+            <td>2010-2013</td>
+            <td>Lead Developer at Tempo App</td>
+        </tr>
+        <tr>
+            <td>2013-2015</td>
+            <td>Clinical Doctor at the National Health Service</td>
+        </tr>
+    </table>
+    <hr>
+    <h3>Skills</h2>
     <table>
         <tr>
             <td>Web development</td>
@@ -48,6 +66,9 @@
             <td>&#9733; &#9733; &#9733;</td>
         </tr>
     </table>
+
+    <hr>
+
     <a href="myhobies.html">My hobbies</a> <a href="mycontact.html">My contact</a>
 </body>
 </html>
