--- a/myhobies.html
+++ b/myhobies.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobbies</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>My Hobbies</h2>
+    <h1>My Hobbies</h2>
     <ol>
         <li><a href="#">Reading</a></li>
         <li>Movies</li>
